<resources>
    <string name="app_name">EmmaZone</string>
    <string name="map_key">AIzaSyD1I33qCNnCUFHV9f2U7s_WeD8vJJ3wmEs</string>
    <string name="sign_in_as_user">Sign In as User</string>
    <string name="sign_in_as_seller">Sign In as Seller</string>
    <string name="continue_as_a_guest">Continue as a Guest</string>
    <string name="new_user">New User ?</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_please_sign_up_to_continue">Welcome, please sign up</string>
    <string name="to_continue">to continue!</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_accept_terms_conditions"><![CDATA[I accept terms & Conditions]]></string>
    <string name="already_a_member">Already a member?</string>
    <string name="sign_in">Sign In</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_type_in_the_verification">Please type in the verification</string>
    <string name="code">code!</string>
    <string name="account">Account</string>
    <string name="my_orders">My Orders</string>
    <string name="wishlist">WishList</string>
    <string name="wishlist1">Wishlist</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="add_new_address">Add New Address</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="select_city">Select City</string>
    <string name="zip_code">Zip Code</string>
    <string name="manually">Manually</string>
    <string name="emmazone_wants_to_access_your_location_only_to_provide_a_better_experience_by_helping_you_find_services_nearby">EmmaZone wants to access your location only to provide a better experience by helping you find services nearby.</string>
    <string name="termsText">Lorem ipsum dolor sit amet, consectetur edipscing elit. sed quis ultricies, lectus, ac vulputate sem. Integer quam elite, iaculis quies placerat consequat, posuere ut augue.Integer quam elite, iaculis quies placerat consequat, posuere ut augue.Integer quam elite, iaculis quies placerat consequat, posuere ut augue.Lorem ipsum dolor sit amet, consectetur edipscing elit. sed quis ultricies, lectus, ac vulputate sem. Integer quam elite, iaculis quies placerat consequat, posuere ut augue.</string>
    <string name="lorem_ipsum_dolor">Lorem ipsum dolor</string>
    <string name="faqText">Lorem ipsum dolor sit amet, consectetur edipscing elit. sed quis ultricies, lectus, ac vulputate sem. Integer quam elite, iaculis quies placerat consequat, posuere ut augue.</string>
    <string name="estimate_delivery_date_time"><![CDATA[Estimate Delivery Date & Time]]></string>
    <string name="_13_june_2021_07_00_pm">13 June 2021, 07:00 pm</string>
    <string name="john_marker">John Marker</string>
    <string name="_260_c_north_ei_camino_real">260-C North EI Camino Real</string>
    <string name="Change">Change</string>
    <string name="payment_method">Payment Method</string>
    <string name="paypal">PayPal</string>
    <string name="price_details">Price Details</string>
    <string name="_3">3</string>
    <string name="item">Item</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank You</string>
    <string name="your_order_has_been_placed">Your order has been placed</string>
    <string name="successfully">successfully</string>
    <string name="updated">Updated</string>
    <string name="your_profile_has_been_update">Your Profile has been update</string>
    <string name="jolly_deo">Jolly Deo</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="search">Search</string>
    <string name="berserka_store">Berserka Store</string>
    <string name="payment_selection">Payment Selection</string>
    <string name="credit_card_debit_card">Credit Card/Debit Card</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="my_wallet">My Wallet</string>
    <string name="wallet">Wallet</string>
    <string name="choose_card">Choose Card</string>
    <string name="hi">Hi</string>
    <string name="jhon_smith">Jhon Smith</string>
    <string name="_207_mazekin_street_new_york_usa">207 Mazekin Street, New York, USA</string>
    <string name="you_are_a_shop">You are a shop?</string>
    <string name="curve_store">Curve Store</string>
    <string name="filter">Filter</string>
    <string name="price">Price</string>
    <string name="price_hiphen">Price -</string>
    <string name="distance">Distance</string>
    <string name="current_location">Current Location</string>
    <string name="nw_tower_new_york_usa">Nw tower, New york, USA</string>
    <string name="colour">Colour</string>
    <string name="low_to_high">Low to High</string>
    <string name="high_to_low">High to Low</string>
    <string name="price_range">Price Range</string>
    <string name="colour1">Colour1</string>
    <string name="size1">Size1</string>
    <string name="x">X</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="are_you_sure_you_want_to_cancel">Are you sure you want to cancel</string>
    <string name="this_reserved_order">this Reserved Order?</string>
    <string name="this_order">this Order?</string>
    <string name="shop_detail">Shop Detail</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_edipscing_elit_sed_to_mode_tempor_incidedunt_ut_lebore_et_dolor_magna_aliqua_quis_ipsum_suspendisse">Lorem ipsum dolor sit amet, consectetur edipscing, elit sed to mode tempor incidedunt ut lebore et dolor magna aliqua, Quis ipsum suspendisse</string>
    <string name="goteo_near_market_new_york_usa">Goteo Near Market, New York, USA</string>
    <string name="categories">Categories</string>
    <string name="all">All</string>
    <string name="products">Products</string>
    <string name="bernd">Bernd</string>
    <string name="delivery_estimate_4_5_days">Delivery Estimate 4-5 days</string>
    <string name="product_detail">Product Detail</string>
    <string name="bernd_shoes">Brend Shoes</string>
    <string name="size">Size</string>
    <string name="insert_comment">Insert Comment</string>
    <string name="winter_sweaters">Winter Sweaters</string>
    <string name="rating_reviews"><![CDATA[Rating & Reviews]]></string>
    <string name="cart">Cart</string>
    <string name="you_may_like">You May Like</string>
    <string name="result">Result</string>
    <string name="profile">Profile</string>
    <string name="order_detail">Order Detail</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="on_going">On Going</string>
    <string name="past">Past</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">Status</string>
    <string name="_02">02</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_earnings">My Earnings</string>
    <string name="messages">Messages</string>
    <string name="your_password_has_been_update_successfully">Your password has been update</string>
    <string name="total_product">Total Product</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="brend_shoes">Brend Shoes</string>
    <string name="_6_00_pm_on_03_sep_2020">6:00 PM on 03 Sep,2020</string>
    <string name="_180_00">€180.00</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="current_balance">Current Balance</string>
    <string name="to">to</string>
    <string name="add_your_bank_account">+ Add Your Bank Account</string>
    <string name="no_transaction_yet">No transaction yet!!</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="bank_branch">Bank Branch</string>
    <string name="account_number">Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="confirm_account_number">Confirm Account Number</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="hdfc_bank_account">HDFC Bank Account</string>
    <string name="xxxx_xxxx_xxxx_6789">xxxx xxxx xxxx 6789</string>
    <string name="completed">Completed</string>
    <string name="your_shop_detail_has_been">Your shop detail has been</string>
    <string name="update_successfully">update Successfully</string>
    <string name="added">Added!</string>
    <string name="your_product_has_been_added">Your product has been added</string>
    <string name="delete_product">Delete Product</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to Delete this product?</string>
    <string name="are_you_sure_you_want_to_delete_story">Are you sure you want to Delete this Story?</string>
    <string name="your_product_detail_has_been">Your product detail has been</string>
    <string name="add_product">Add Product</string>
    <string name="sales">Sales</string>
    <string name="edit_shop_detail">Edit Shop Detail</string>
    <string name="add_change">Add/change</string>
    <string name="images_videos">Images/Videos</string>
    <string name="year_of_foundation">Year of foundation</string>
    <string name="category_name">Category Name</string>
    <string name="add_image">Add Image</string>
    <string name="edit_image">Edit Image</string>
    <string name="choose_your_services">Choose your Services</string>
    <string name="click_and_collect">Click And Collect</string>
    <string name="lifernado">Liferando</string>
    <string name="own_delivery">Own Delivery</string>
    <string name="delivery_type">Delivery Type :</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="add_product_images">Add/Edit Product Images</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quality">Product Quantity</string>
    <string name="product_colour">Product Colour</string>
    <string name="colour_1">Colour 1</string>
    <string name="product_size">Product Size</string>
    <string name="euro_sign">€</string>
    <string name="product_highlight">Product Highlight</string>
    <string name="change_account">Change Account</string>
    <string name="click_collect"><![CDATA[Click & Collect]]></string>
    <string name="order_type">Order Type</string>
    <string name="no">No</string>
    <string name="logout_desc">Are you sure you want logout?</string>
    <string name="yes">Yes</string>
    <string name="card_number">Card Number</string>
    <string name="add_card">Add Card</string>
    <string name="enter_name">Enter Name</string>
    <string name="exp_date">Expiry Date</string>
    <string name="select_size">Select size</string>
    <string name="select_category">Select Category</string>
    <string name="please_select_color">Select color</string>
    <string name="category">Category</string>
</resources>