<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="withText" />

    <item
        android:id="@+id/wishList"
        android:icon="@drawable/wishlist_selector"
        android:title="@string/wishlist1"
        app:showAsAction="withText" />

    <item
        android:id="@+id/myOrders"
        android:icon="@drawable/my_orders_selector"
        android:title="@string/my_orders"
        app:showAsAction="withText" />

    <item
        android:id="@+id/account"
        android:icon="@drawable/account_selector"
        android:title="@string/account"
        app:showAsAction="withText" />

</menu>