<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home_provider"
        android:title="@string/home"
        app:showAsAction="withText"
        android:icon="@drawable/home_selector"
        />

    <item android:id="@+id/addProduct"
        android:title="@string/add_product"
        app:showAsAction="withText"
        android:icon="@drawable/add_product_selector"
        />

    <item android:id="@+id/sale"
        android:title="@string/sales"
        app:showAsAction="withText"
        android:icon="@drawable/sale_selector"
        />

    <item android:id="@+id/account_provider"
        android:title="@string/account"
        app:showAsAction="withText"
        android:icon="@drawable/account_selector"
        />

</menu>