<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp"
    android:paddingBottom="@dimen/_20sdp"
    android:background="@drawable/bg_profile"
    tools:context=".activities.main.BottomSheetDialog">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/_15sdp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="@dimen/sp18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.slider.Slider
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:thumbColor="@color/green"
        android:includeFontPadding="false"
        app:layout_constraintEnd_toEndOf="@id/tvPrice"
        app:layout_constraintStart_toStartOf="@id/tvPrice"
        app:layout_constraintTop_toBottomOf="@id/tvPrice"
        android:valueFrom="0"
        android:valueTo="2000"
        android:stepSize="1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/seekBar"
        app:layout_constraintTop_toBottomOf="@id/seekBar"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2000"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/seekBar"
        app:layout_constraintTop_toBottomOf="@id/seekBar"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="@dimen/sp18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvPrice"
        app:layout_constraintStart_toStartOf="@id/tvPrice"
        app:layout_constraintTop_toBottomOf="@id/tvMax" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelectCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/underline_green"
        android:text="@string/select_category"
        android:textColor="@color/green"
        android:textSize="@dimen/sp18"
        app:layout_constraintEnd_toEndOf="@id/tvPrice"
        app:layout_constraintStart_toStartOf="@id/tvPrice"
        app:layout_constraintTop_toBottomOf="@id/tvCategory" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/colour"
        android:textColor="@color/black"
        android:textSize="@dimen/sp18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/tvPrice"
        app:layout_constraintTop_toBottomOf="@id/tvSelectCategory" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelectColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/underline_green"
        android:text="@string/please_select_color"
        android:textColor="@color/green"
        android:textSize="@dimen/sp18"
        app:layout_constraintEnd_toEndOf="@id/tvColor"
        app:layout_constraintStart_toStartOf="@id/tvColor"
        app:layout_constraintTop_toBottomOf="@id/tvColor" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/size"
        android:textColor="@color/black"
        android:textSize="@dimen/sp18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tvSelectCategory" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelectSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/underline_green"
        android:text="@string/select_size"
        android:textColor="@color/green"
        android:textSize="@dimen/sp18"
        app:layout_constraintEnd_toEndOf="@id/tvSize"
        app:layout_constraintStart_toStartOf="@id/tvSize"
        app:layout_constraintTop_toBottomOf="@id/tvSize" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPriceRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/price_range"
        android:textColor="@color/black"
        android:textSize="@dimen/sp18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvPrice"
        app:layout_constraintTop_toBottomOf="@id/tvSelectSize" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/tvPrice"
        app:layout_constraintTop_toBottomOf="@id/tvPriceRange">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/low_to_high"
            android:textColor="@color/green"
            android:textSize="@dimen/sp18"
            android:checked="false"
            />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:padding="@dimen/_5sdp"
            android:text="@string/high_to_low"
            android:textColor="@color/green"
            android:textSize="@dimen/sp18" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:padding="@dimen/_5sdp"
            android:text="None"
            android:textColor="@color/green"
            android:textSize="@dimen/sp18" />
    </RadioGroup>


    <android.widget.Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/done"
        app:layout_constraintEnd_toEndOf="@+id/tvPrice"
        app:layout_constraintStart_toStartOf="@+id/tvPrice"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>
