<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/tick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:src="@drawable/tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/thankYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/updated"
        android:textColor="@color/black"
        android:textSize="@dimen/sp20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tick"
        app:layout_constraintStart_toStartOf="@+id/tick"
        app:layout_constraintTop_toBottomOf="@+id/tick" />

    <TextView
        android:id="@+id/orderPlaced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/your_shop_detail_has_been"
        android:textColor="@color/light_black"
        android:textSize="@dimen/sp15"
        app:layout_constraintEnd_toEndOf="@+id/tick"
        app:layout_constraintStart_toStartOf="@+id/tick"
        app:layout_constraintTop_toBottomOf="@+id/thankYou" />

    <TextView
        android:id="@+id/successfully"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_successfully"
        android:textColor="@color/light_black"
        android:textSize="@dimen/sp15"
        app:layout_constraintEnd_toEndOf="@+id/orderPlaced"
        app:layout_constraintStart_toStartOf="@+id/orderPlaced"
        app:layout_constraintTop_toBottomOf="@+id/orderPlaced" />

    <android.widget.Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp25"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/successfully"
        app:layout_constraintStart_toStartOf="@+id/successfully"
        app:layout_constraintTop_toBottomOf="@id/successfully"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>